deploy/gatekeeper/constraint-templates/k8sblockrevokeddigests.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sblockrevokeddigests
  annotations:
    description: >-
      Dynamically blocks deployment of specific container image digests that have been revoked due to runtime compromise alerts.
spec:
  crd:
    spec:
      names:
        kind: K8sBlockRevokedDigests
      validation:
        openAPIV3Schema:
          type: object
          properties:
            revokedDigests:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sblockrevokeddigests

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          revoked_digest := input.parameters.revokedDigests[_]
          contains(container.image, revoked_digest)
          msg := sprintf("Container '%v' uses image digest '%v' which has been dynamically revoked due to runtime compromise", [container.name, revoked_digest])
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.initContainers[_]
          revoked_digest := input.parameters.revokedDigests[_]
          contains(container.image, revoked_digest)
          msg := sprintf("InitContainer '%v' uses image digest '%v' which has been dynamically revoked due to runtime compromise", [container.name, revoked_digest])
        }
