deploy/gatekeeper/constraint-templates/k8spspnonroot.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8spspnonroot
  annotations:
    description: >-
      Requires container securityContext to run as non-root (runAsNonRoot: true or runAsUser > 0).
spec:
  crd:
    spec:
      names:
        kind: K8sPSPNonRoot
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8spspnonroot

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not is_non_root(container, input.review.object.spec)
          msg := sprintf("Container '%v' must set runAsNonRoot to true or specify a non-zero runAsUser", [container.name])
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.initContainers[_]
          not is_non_root(container, input.review.object.spec)
          msg := sprintf("InitContainer '%v' must set runAsNonRoot to true or specify a non-zero runAsUser", [container.name])
        }

        is_non_root(container, pod_spec) {
          container.securityContext.runAsNonRoot == true
        }

        is_non_root(container, pod_spec) {
          container.securityContext.runAsUser > 0
        }

        is_non_root(container, pod_spec) {
          not container.securityContext.runAsNonRoot == false
          not container.securityContext.runAsUser == 0
          pod_spec.securityContext.runAsNonRoot == true
        }

        is_non_root(container, pod_spec) {
          not container.securityContext.runAsUser == 0
          pod_spec.securityContext.runAsUser > 0
        }
